2000-10-12  Alan Modra  <alan@linuxcare.com.au>

	* elf64-hppa.c: Include alloca-conf.h

2000-10-11  Alan Modra  <alan@linuxcare.com.au>

	* elf.c (swap_out_syms): Revert 2000-10-07 changes.

	* ieee.c (ieee_make_empty_symbol): Oops, bfd_zalloc needs another arg.

2000-10-10  Alan Modra  <alan@linuxcare.com.au>

	* ieee.c (ieee_make_empty_symbol): Use bfd_zalloc, not bfd_zmalloc.

2000-10-10  Tom Rix <trix@redhat.com>

	* section.c (bfd_make_section_anyway): Release newsect ptr when 
	newsect->symbol fails to alloc.  Use bfd_release instead of free.

2000-10-09  Richard Henderson  <rth@cygnus.com

	* elf64-ia64.c (elf64_ia64_unwind_entry_compare_bfd): New.
	(elf64_ia64_unwind_entry_compare): New.
	(elf64_ia64_final_link): Sort the .IA_64.unwind section.

2000-10-07  Alan Modra  <alan@linuxcare.com.au>

	* elflink.h (size_dynamic_sections): Don't create various tags if
	.dynstr is excluded from the link.  Don't set first dynsym entry
	if dynsymcount is zero.
	(elf_bfd_final_link): Don't try to swap out dynamic syms if
	.dynsym excluded from the link.  Don't try to write any dynamic
	sections excluded from the link.

	* elf.c (swap_out_syms): Handle global section symbols.

2000-10-05  DJ Delorie  <dj@redhat.com>

	* peigen.c (_bfd_pei_swap_scnhdr_out): note extended relocs
	* coffcode.h (coff_set_alignment_hook): read extended reloc count
	(coff_write_relocs): write extended reloc count
	(coff_write_object_contents): account for extended relocs

2000-10-05  Jim Wilson  <wilson@cygnus.com>

	* elf-bfd.h (struct elf_backend_data): Add elf_backend_section_flags
	field.
	* elf.c (_bfd_elf_make_section_from_shdr): Call the
	elf_backend_section_flags function.
	* elf64-ia64.c (elf64_ia64_section_from_shdr): Delete flag conversion
	code.
	(elf64_ia64_section_flags): New function containing flag conversion
	code.
	(elf_backend_section_flags): Define to elf64_ia64_section_flags.
	* elfxx-target.h (elf_backend_section_flags): Define.