@@ -1,3 +1,8 @@
+2000-10-12  Alan Modra  <alan@linuxcare.com.au>
+
+	* ldlang.c (section_already_linked): Set kept_section instead of
+	sec->comdat->sec.
+
 2000-10-10  Kazu Hirata  <kazu@hxi.com>
 
 	* deffile.h: Fix formatting.
